--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,323 @@
 body {
+  background-color: rgba(23, 26, 38, 1) !important;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Libre Baskerville", serif !important;
+}
+/* Home style */
+
+.navbar,
+.nav-link,
+.user-name h1,
+.introduction h1,
+.proficiency h1,
+.exp-cont h1,
+.reviews h1 {
+  color: rgba(255, 255, 255, 0.9) !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar-brand {
+  font-weight: 400;
+  font-style: italic;
+  font-size: 15px !important;
+}
+
+.nav-item {
+  margin-right: 40px;
+}
+
+.nav-item:first-child {
+  border-bottom: 5px solid #615ed6;
+}
+
+/* Hero section */
+
+.hero-section {
+  margin-bottom: 6rem;
+}
+
+.photo-box {
+  margin-right: 70px;
+}
+
+.user-name h6 {
+  color: #615ed6;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+}
+
+.user-name h1 {
+  font-style: "Bold";
+  font-size: 43px;
+  line-height: 70px;
+}
+
+.social-icons {
+  background-color: #615ed6;
+  width: 155px;
+  height: 46px;
+  border-radius: 8px;
+  padding-top: 10px;
+}
+
+.social-icons ul {
+  list-style-type: none;
+  padding-left: 10px;
+}
+
+.social-icons li {
+  display: inline;
+}
+
+.social-icons a {
+  color: rgba(255, 255, 255, 0.9);
+  margin: 0 10px;
+  font-size: 19px;
+}
+
+.social-icons a:hover {
+  color: rgba(255, 255, 255, 0.9);
+}
+
+/* Introduction */
+.introduction {
+  margin-top: 40px;
+}
+
+.bio-info {
+  color: rgba(131, 133, 153, 1);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 2.2rem;
+  margin-bottom: 5rem;
+}
+
+.bio-info span {
+  color: rgba(97, 94, 214, 1);
+}
+
+button {
+  width: 300px;
+  height: 45px;
+  background-color: rgba(97, 94, 214, 1);
+  color: rgba(255, 255, 255, 0.9);
+  border-radius: 8px !important;
+  border: none;
+}
+
+/* skills */
+.proficiency {
+  color: rgba(131, 133, 153, 1);
+  margin-top: 9rem;
+}
+
+.card {
+  width: 20%;
+  padding: 30px;
+}
+
+.viewGithub {
+  margin: 6.5rem 5rem;
+}
+
+.card1 {
+  background-color: rgba(97, 94, 214, 0.2) !important;
+}
+
+.card2 {
+  background-color: rgba(97, 94, 214, 0.5) !important;
+}
+
+.cert-icon {
+  color: rgba(255, 255, 255, 0.9);
+  font-size: 25px;
+}
+
+.card-icon {
+  font-size: 25px;
+  color: #615ed6;
+}
+
+.title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.describe {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+}
+
+.skill-card {
+  margin: auto;
+  width: 90%;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 35px;
+  border-style: dashed;
+  background: rgba(97, 94, 214, 0.15);
+  border: 1px dashed rgba(255, 255, 255, 0.6);
+  border-radius: 20px;
+  margin-bottom: 10rem;
+}
+
+.skill-card h6 {
+  font-style: italic;
+  font-weight: 400;
+  font-size: 15px;
+  color: #615ed6;
+}
+
+/* Experience */
+.experience {
+  margin: auto;
+  width: 90%;
+  border-color: yellow;
+}
+
+.experience h6 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  color: #615ed6;
+}
+
+.work-place {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 12px;
+  color: #d7d9ef;
+}
+
+.exp-rectangle {
+  margin-bottom: 5rem;
+}
+
+.roles {
+  margin-bottom: 7rem;
+}
+
+.year p {
+  color: #838599;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 8.5rem;
+}
+
+.line {
+  height: 99%;
+  margin-top: -5rem;
+}
+
+/* reviews */
+.card2 {
+  width: 31%;
+  padding: 10px;
+}
+
+.quote {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 22px;
+  color: #b0b1bc;
+}
+
+.social-page {
+  color: #d7d9ef;
+  font-family: "Poppins";
+  font-style: italics;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 24px;
+}
+
+/* footer */
+.footer p {
+  font-style: italic;
+  font-weight: 400;
+  font-size: 12px;
+  color: #838599;
+}
+
+/* contact */
+.contact-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 28px;
+  color: #838599;
+}
+
+.message {
+  margin-top: 8rem;
+}
+
+.message h3 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 40px;
+  color: #d7d9ef;
+}
+
+.message p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 20px;
+  color: #838599;
+}
+
+input#fullname.form-control,
+input#email.form-control,
+textarea#textarea1.form-control {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 14px;
+  padding: 20px;
+}
+
+input[type="text"] {
+  padding: 21px 27px;
+}
+
+.profile-url {
+  margin-top: 5rem;
+  color: rgba(131, 133, 153, 1);
+}
+
+.socialMedia-icons ul {
+  list-style-type: none;
+  padding-left: 2px;
+}
+
+.socialMedia-icons li{
+  margin: 9px 0;
+}
+
+.socialMedia-icons span {
+  margin: 0 3rem;
+}
+
+.icons{
+  color: #615ed6;
+}
+
+.icon-link a{
+  color: 
+  rgba(255, 255, 255, 0.9);
 }
